# hf_hf_example

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  pyproject.toml  readme.md
healthfact_example/: data.py  main.py  models.py  summary_strategies.py
